<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/test_margin"
    tools:context="com.example.alvin.w2_d5_test.MainActivity">

    <TextView
        android:text="@string/lbl_test_home"
        android:textSize="@dimen/test_title_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/et_del_up"
        android:hint="@string/lbl_del_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:text="@string/lbl_btn_toSave"
        android:onClick="toSaveActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:text="@string/lbl_btn_toRead"
        android:onClick="toReadActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:text="@string/lbl_btn_toUpdate"
        android:onClick="toUpdateActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:text="@string/lbl_btn_toDelete"
        android:onClick="toDeleteActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
