<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/test_margin"
    tools:context="com.example.alvin.w2_d5_test.SaveActivity">

    <TextView
        android:text="@string/lbl_test_save"
        android:textSize="@dimen/test_title_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/et_titleSave"
        android:hint="@string/lbl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/et_contentSave"
        android:hint="@string/lbl_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_save"
        android:text="@string/lbl_btn_toSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_result_save"
        android:text="@string/lbl_read_result"
        android:textSize="@dimen/result_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
